--- a/login.html
+++ b/login.html
@@ -2,25 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>HiddenLines - LogIn Page</title>
 
+    <!-- custom css -->
+    <link rel="stylesheet" href="./style.css">
 
-        <!-- custom css -->
-    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-
-
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="loginPassword" placeholder="Password" required />
-    <button type="submit">Login</button>
-    <button type="button" id="googleLogin">Login with Google</button>
-  </form>
-  
-  <script type="module" src="./index.js"></script>
-
     
+
+
+     <!-- Header Start -->
+<header>
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="index.html" class="logo">HiddenLines</a>
+  
+        <ul class="nav-links">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./add-blogs.html">Blogs</a></li>
+            <li><a href="./login.html" class="login-btn">Login</a></li>
+            <li><a href="./signup.html" class="signup-btn">Signup</a></li>
+          </ul>
+  
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- Header End -->
+
+
+    <!-- form start -->
+
+
+
+    <!-- Login Form Start -->
+    <form class="login-form form">
+        <h1 class="form-title">Login Form</h1>
+  
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" id="email" aria-describedby="emailHelp" placeholder="Enter your email">
+            <small id="emailHelp">We'll never share your email with anyone else.</small>
+        </div>
+  
+        <div class="form-group">
+            <label for="pswd">Password</label>
+            <input type="password" required id="pswd" placeholder="Enter your password">
+        </div>
+  
+        <div class="form-group text-center">
+            <p>Don't Have an Account? <a href="./signup.html">Signup Page</a></p>
+        </div>
+  
+        <div class="form-group text-center">
+            <button type="button" id="btn2" class="btn-login btn btn-auth">Login</button>
+        </div>
+    </form>
+    <!-- Login Form End -->
+  
+
+    <!-- form end -->
+
+
+
+
+    <!-- custom js -->
+    <script type="module" src="./auth.js"></script>
+    <script type="module" src="./index.js"></script>
+
 </body>
 </html>
